--- a/build.gradle
+++ b/build.gradle
@@ -4,29 +4,30 @@
  */
 
 buildscript {
-    ext.kotlinVersion = '1.7.20'
-    ext.coroutineVersion = '1.6.4'
+    ext.kotlinVersion = '1.7.21'
+    ext.coroutineVersion = '1.7.3'
 
-    ext.annotationVersion = '1.5.0'
-    ext.appcompatVersion = '1.5.1'
-    ext.coreVersion = '1.9.0'
-    ext.collectionVersion = '1.3.0-dev01'
-    ext.fragmentVersion = '1.5.5'
-    ext.lifecycleVersion = '2.5.1'
-    ext.navigationVersion = '2.5.3'
+    ext.annotationVersion = '1.7.0'
+    ext.appcompatVersion = '1.6.1'
+    ext.coreVersion = '1.12.0'
+    ext.collectionVersion = '1.3.0'
+    ext.fragmentVersion = '1.6.2'
+    ext.lifecycleVersion = '2.6.2'
+    ext.materialVersion = '1.10.0'
+    ext.navigationVersion = '2.7.5'
     ext.preferenceVersion = '1.2.0'
-    ext.webkitVersion = '1.5.0'
+    ext.webkitVersion = '1.9.0'
 
     ext.circleimageviewVersion = '3.1.0'
     ext.volleyVersion = '1.2.1'
-    ext.wireVersion = '4.4.3'
+    ext.wireVersion = '4.9.3'
 
 
-    ext.androidBuildGradleVersion = '7.3.1'
-    ext.androidBuildVersionTools = '33.0.1'
+    ext.androidBuildGradleVersion = '7.4.2'
+    ext.androidBuildVersionTools = '33.0.2'
 
     ext.androidMinSdk = 23
-    ext.androidTargetSdk = 30
+    ext.androidTargetSdk = 29
     ext.androidCompileSdk = 33
 
     repositories {
@@ -41,12 +42,22 @@ buildscript {
     }
 }
 
+
+def gmsVersion = "23.07.55"
+def gmsVersionCode = Integer.parseInt(gmsVersion.replaceAll('\\.', ''))
+
+def ourVersionBase = "0.2.27"
+def ourVersionMinor = 73
+
+def ourVersionCode = gmsVersionCode * 1000 + ourVersionMinor
+def ourVersionName = "$ourVersionBase.$gmsVersionCode"
+
 allprojects {
     apply plugin: 'idea'
 
     group = 'org.microg.gms'
-    version = "0.2.25.224113"
-    ext.appVersionCode = 224113003
+    version = ourVersionName
+    ext.appVersionCode = ourVersionCode
     ext.isReleaseVersion = false
 }
 
