--- a/play-services-core/src/main/AndroidManifest.xml
+++ b/play-services-core/src/main/AndroidManifest.xml
@@ -87,8 +87,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:multiArch="true"
-        android:theme="@style/Theme.AppCompat.DayNight"
-        android:networkSecurityConfig="@xml/network_security_config">
+        android:theme="@style/AppTheme"
+        android:networkSecurityConfig="@xml/network_security_config"
+        tools:targetApi="r">
 
         <library android:name="com.mgoogle.android.gms" />
 
@@ -309,7 +310,7 @@
             android:process=":ui"
             android:roundIcon="@mipmap/ic_launcher"
             android:taskAffinity="org.microg.gms.settings"
-            android:theme="@style/Theme.AppCompat.DayNight">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -339,7 +340,7 @@
             android:process=":ui"
             android:targetActivity="org.microg.gms.ui.SettingsActivity"
             android:taskAffinity="org.microg.gms.settings"
-            android:theme="@style/Theme.AppCompat.DayNight">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="com.android.settings.action.EXTRA_SETTINGS" />
             </intent-filter>
