--- a/build.gradle
+++ b/build.gradle
@@ -5,22 +5,22 @@
 
 buildscript {
     ext.kotlinVersion = '1.7.21'
-    ext.coroutineVersion = '1.7.3'
+    ext.coroutineVersion = '1.6.4'
 
-    ext.annotationVersion = '1.7.0'
+    ext.annotationVersion = '1.5.0'
     ext.appcompatVersion = '1.6.1'
-    ext.coreVersion = '1.10.1'
-    ext.collectionVersion = '1.3.0'
-    ext.fragmentVersion = '1.6.2'
-    ext.lifecycleVersion = '2.6.2'
-    ext.materialVersion = '1.9.0'
-    ext.navigationVersion = '2.6.0'
-    ext.preferenceVersion = '1.2.1'
-    ext.webkitVersion = '1.7.0'
+    ext.coreVersion = '1.9.0'
+    ext.collectionVersion = '1.3.0-dev01'
+    ext.fragmentVersion = '1.5.5'
+    ext.lifecycleVersion = '2.5.1'
+    ext.materialVersion = '1.7.0'
+    ext.navigationVersion = '2.5.3'
+    ext.preferenceVersion = '1.2.0'
+    ext.webkitVersion = '1.5.0'
 
     ext.circleimageviewVersion = '3.1.0'
     ext.volleyVersion = '1.2.1'
-    ext.wireVersion = '4.9.3'
+    ext.wireVersion = '4.8.0'
 
 
     ext.androidBuildGradleVersion = '7.4.2'
