--- a/play-services-basement/build.gradle
+++ b/play-services-basement/build.gradle
@@ -18,7 +18,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 dependencies {
-    api "org.microg:safe-parcel:1.7.0"
+    api "org.microg:safe-parcel:$safeParcelVersion"
 
     // Dependencies from play-services-basement:18.0.0
     api "androidx.collection:collection:$collectionVersion"
