--- a/play-services-basement/build.gradle
+++ b/play-services-basement/build.gradle
@@ -39,6 +39,7 @@ android {
         minSdkVersion androidMinSdk
         targetSdkVersion androidTargetSdk
         buildConfigField "int", "VERSION_CODE", "$appVersionCode"
+        buildConfigField "String", "BASE_PACKAGE_NAME", "\"$basePackageName\""
     }
 
     buildFeatures {
