--- a/play-services-core/build.gradle
+++ b/play-services-core/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 }
 
 android {
+    namespace "${basePackageName}.android.gms"
+
     compileSdkVersion androidCompileSdk
     buildToolsVersion androidBuildVersionTools
 
@@ -58,10 +60,25 @@ android {
         minSdkVersion androidMinSdk
         targetSdkVersion androidTargetSdk
 
+        buildConfigField "String", "BASE_PACKAGE_NAME", "\"$basePackageName\""
+
         ndk {
             abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
 
+        buildConfigField "String", "APPLICATION_NAMESPACE", "\"${android.namespace}\""
+        buildConfigField "String", "BASE_PACKAGE_NAME", "\"$basePackageName\""
+        manifestPlaceholders = [
+                basePackageName: "$basePackageName"
+        ]
+
+        // provide package name to xml resources
+        resValue "string", "var_authenticator_account_type", "$basePackageName"
+        resValue "string", "var_contact_syncadapter_account_type", "$basePackageName"
+        resValue "string", "var_pref_auth_action_security_settings", "${basePackageName}.android.gms.accountsettings.SECURITY_SETTINGS"
+        resValue "string", "var_pref_auth_action_privacy_settings", "${basePackageName}.android.gms.accountsettings.PRIVACY_SETTINGS"
+        resValue "string", "var_pref_auth_action_preferences_settings", "${basePackageName}.android.gms.accountsettings.ACCOUNT_PREFERENCES_SETTINGS"
+        resValue "string", "var_pref_start_gms_package", "${basePackageName}.android.gms"
     }
 
     buildFeatures {
