Allow to compress the libraries https://github.com/microg/GmsCore/commit/4651ed55308f2113b0ada49884dd320165dc5e10

--- a/play-services-core/build.gradle
+++ b/play-services-core/build.gradle
@@ -111,7 +111,7 @@ android {
     packagingOptions {
         exclude 'META-INF/ASL2.0'
         jniLibs {
-            useLegacyPackaging false
+            useLegacyPackaging true
         }
     }
 }
