--- a/play-services-core/build.gradle
+++ b/play-services-core/build.gradle
@@ -62,6 +62,9 @@ android {
 
         buildConfigField "String", "BASE_PACKAGE_NAME", "\"$basePackageName\""
 
+        multiDexEnabled true
+        multiDexKeepProguard file('multidex-keep.pro')
+
         ndk {
             abiFilters "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
         }
