Use fake-signature module https://github.com/microg/GmsCore/commit/0f04df65e0deca5ca58b6d377a464d27f669f06e

--- a/play-services-core/build.gradle
+++ b/play-services-core/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     implementation "de.hdodenhof:circleimageview:$circleimageviewVersion"
     implementation "androidx.webkit:webkit:$webkitVersion"
 
+    implementation project(':fake-signature')
+
     implementation project(':play-services-base-core')
     implementation project(':play-services-core-proto')
     implementation project(':play-services-core:microg-ui-tools') // deprecated
