Build: Change system for optional components https://github.com/microg/GmsCore/commit/dd8c5601f5a521fbf48a2bdcaf4b5ccc13340753

--- a/play-services-core/src/main/AndroidManifest.xml
+++ b/play-services-core/src/main/AndroidManifest.xml
@@ -95,7 +95,7 @@
         <!-- Internal Settings -->
 
         <provider
-            android:name="org.microg.mgms.settings.SettingsProvider"
+            android:name="org.microg.gms.settings.SettingsProvider"
             android:authorities="${applicationId}.microg.settings"
             android:exported="false" />
 
@@ -106,7 +106,7 @@
             android:authorities="${basePackageName}.android.gsf.gservices"
             android:exported="true" />
         <provider
-            android:name="org.microg.mgms.settings.GoogleSettingsProvider"
+            android:name="org.microg.gms.settings.GoogleSettingsProvider"
             android:authorities="${basePackageName}.settings"
             android:exported="true" />
 
