--- a/play-services-core/microg-ui-tools/build.gradle
+++ b/play-services-core/microg-ui-tools/build.gradle
@@ -34,7 +34,7 @@ android {
 
     lintOptions {
         // TODO: Remove MissingTranslation once we have stable strings and proper translations.
-        disable 'MissingTranslation'
+        disable 'MissingTranslation', 'GetLocales'
     }
 }
 
