--- a/build.gradle
+++ b/build.gradle
@@ -48,13 +48,12 @@ buildscript {
 }
 
 
-def gmsVersion = "23.07.55"
+def gmsVersion = "23.49.14"
 def gmsVersionCode = Integer.parseInt(gmsVersion.replaceAll('\\.', ''))
 
-def ourVersionBase = "0.2.27"
-def ourVersionMinor = 73
+def ourVersionBase = "0.3.0"
 
-def ourVersionCode = gmsVersionCode * 1000 + ourVersionMinor
+def ourVersionCode = gmsVersionCode * 1000
 def ourVersionName = "$ourVersionBase.$gmsVersionCode"
 
 allprojects {
